God the post to work posting data to API.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /.vs/TestMicrosoftPing/CopilotIndices/18.0.923.20550
 /MicrosoftPingService/bin/Debug/net10.0
 /MicrosoftPingService/obj
+/.vs/ProjectEvaluation
